--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   
-
+min-height: 100vh; 
   background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
               url("./bull9.jpg") no-repeat center center; 
                 background-size: cover;  
