--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   
 min-height: 100vh; 
   background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-              url("./bull9.jpg") no-repeat center center; 
+              url("./image/bull9.jpg") no-repeat center center; 
                 background-size: cover;  
                 
 
